[tool.poetry]
name = "memes-bot"
version = "0.1.0"
description = ""
authors = ["Samuele Piazzesi <samuelepiazzesi@gmail.com>"]
readme = "README.md"
packages = [{include = "memes_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
pytelegrambotapi = "^4.12.0"
load-dotenv = "^0.1.0"
aiohttp = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
